UPD: Update CSS for mouse hover and fix text overflowing.

--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 header {
-  background-color: #B2BEB5;
+  background-color: #b2beb5;
   /* margin: auto -16px; */
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -55,12 +55,12 @@ footer p {
 .note h1 {
   font-size: 1.1em;
   margin-bottom: 6px;
+  word-wrap: break-word;
 }
 
 .note p {
   font-size: 1.1em;
   margin-bottom: 10px;
-  white-space: pre-wrap;
   word-wrap: break-word;
 }
 
@@ -68,13 +68,17 @@ footer p {
   position: relative;
   float: right;
   margin-right: 10px;
-  color: #B2BEB5;
+  color: #b2beb5;
   background-color: #fff;
   border: none;
   width: 36px;
   height: 36px;
   cursor: pointer;
   outline: none;
+}
+
+.note button:hover {
+  color: #ff0000;
 }
 
 form {
@@ -102,7 +106,7 @@ form button {
   position: absolute;
   right: 18px;
   bottom: -18px;
-  background: #B2BEB5;
+  background: #b2beb5;
   color: #fff;
   border: none;
   border-radius: 50%;
@@ -111,6 +115,12 @@ form button {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   cursor: pointer;
   outline: none;
+}
+
+form button:hover {
+  background: #b0b8b2;
+  width: 40px;
+  height: 40px;
 }
 
 form p {
